# court_classyfication

./: .env.example  .gitignore  README.md  data_exploration.py  data_preprocessing.py  get_data.py  main.py  prefect_flows.py  pyproject.toml  train_model.py
config/: courts.json  preprocessing.json  scraping.json
data_exploration/: boundary_looking.py  classes_counting.py  helpers.py
helpers/: file_compresor.py
prefect_tasks/: get_data.py  ml_model.py  moving.py  preprocessing.py  tokening.py
pytorch_runs/: torch_basic_run.py
scikit_runs/: bag_tf_idf.py  bag_unknown.py  online.py  tokens_run.py  tree_with_bag.py
src/: basic_preprocessing.py  exceptions.py  labeling.py  loggers.py  ml_preparing.py  scraping.py  stopwords.py  texts_corps.py
