[project]
name = "court_classyfication"
version = "0.7.1"
description = "Default template for PDM package"
authors = [
    {name = "Eryk Mikolajewicz", email = "eryk.mikolajewicz@gmail.com"},
]
dependencies = [
    "httpx==0.28.*",
    "BeautifulSoup4==4.12.*",
    "pystempel==2.0.*",
    "scikit-learn==1.6.*",
    "prefect==3.1.*",
    "seaborn==0.13.*",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
